<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cost"
                android:gravity="center"
                android:id="@+id/textView2"
                android:textColor="#000000" />
            
            <EditText
                android:id="@+id/et_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setCost"
                android:numeric="decimal"
                />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/usedLabe"
                android:gravity="center"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/et_used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setLabel"
                />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tittle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/distanceActualLabe"
                android:gravity="center"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/et_distance_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setLabel"
                android:numeric="integer"

                />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date2"
                android:gravity="center"
                android:id="@+id/textView3"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:editable="false"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:gravity="center"
            android:id="@+id/textView"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:editable="true"
            android:hint="@string/setDescripcion"
            android:lines="5"
            android:linksClickable="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bSave"
            android:id="@+id/b_save"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/button_style"
            android:background="@color/buttonBackground"

            />
    </LinearLayout>
</LinearLayout>
