<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AddVehActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtBrand"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:id="@+id/txt_brand" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_brands"
            android:spinnerMode="dropdown"
            android:layout_alignTop="@+id/txt_brand"
            android:layout_toRightOf="@+id/txt_brand"
            android:layout_toEndOf="@+id/txt_brand" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtYear"
            android:id="@+id/textView2"
            android:paddingTop="20dp"
            android:layout_alignTop="@+id/sp_years"
            android:layout_toLeftOf="@+id/sp_years"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/txt_unit" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:id="@+id/sp_years"
            android:layout_below="@+id/sp_brands"
            android:layout_alignLeft="@+id/sp_brands"
            android:layout_alignStart="@+id/sp_brands" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelModel"
            android:id="@+id/txt_model"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/sp_years"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RadioGroup
            android:id="@+id/rbg_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sp_years"
            android:layout_alignLeft="@+id/sp_years"
            android:layout_alignStart="@+id/sp_years"
            >

            <EditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_model"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/rbg_distance"
                android:layout_alignStart="@+id/rbg_distance"
                android:layout_alignRight="@+id/rbg_distance"
                android:layout_alignEnd="@+id/rbg_distance" />

            <RadioButton
                android:id="@+id/rb_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilometer"
                android:layout_marginTop="8dp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/currentMileage"
            android:id="@+id/textView3"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/rbg_distance"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_current_kms"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/rbg_distance"
            android:layout_alignStart="@+id/rbg_distance"
            android:layout_alignRight="@+id/rbg_distance"
            android:layout_alignEnd="@+id/rbg_distance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dailyMileage"
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/et_current_kms"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_daily_kms"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/et_current_kms"
            android:layout_alignStart="@+id/et_current_kms"
            android:layout_alignRight="@+id/et_current_kms"
            android:layout_alignEnd="@+id/et_current_kms"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSave"
            android:id="@+id/button_save"
            android:layout_below="@+id/et_daily_kms"
            android:layout_centerHorizontal="true"
            android:theme="@style/button_style"
            android:background="@color/buttonBackground"
            android:layout_marginTop="54dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/unitMeasure"
            android:id="@+id/txt_unit"
            android:layout_alignBottom="@+id/rbg_distance"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</LinearLayout>